Update project description in index.html
Removed citation reference from project description.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h3>EyeScopeAI <span class="project-tags">[ICMR STS Grant]</span></h3>
             <span class="date">Principal Investigator</span>
             <ul>
-                <li>Developing a fully offline computer vision system for refractive error screening in rural settings[cite: 31].</li>
+                <li>Developing a fully offline computer vision system for refractive error screening in rural settings.</li>
                 <li>Secured competitive national research funding (ICMR STS) to address healthcare access disparities through frugal innovation.</li>
             </ul>
         </div>
