--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="contact-info">
             <a href="mailto:gangadharananirudh@gmail.com">Email</a> • 
             <a href="https://www.linkedin.com/in/anirudh-gangadharan-792a61286/">LinkedIn</a> • 
-            <a href="https://github.io/anirudhgangadharan/">GitHub</a> • 
+            <a href="https://github.com/anirudhgangadharan">GitHub</a> • 
         </div>
     </header>
 
