--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <header>
         <h1>Anirudh Gangadharan</h1>
-        <div class="header-bio">Medical Student-Scientist | AI in Healthcare | Biomedical Engineering</div>
+        <div class="header-bio">Medical Student (MS3, MBBS)-Researcher | AI in Healthcare | Biomedical Engineering</div>
         <div class="contact-info">
             <a href="mailto:gangadharananirudh@gmail.com">Email</a> • 
             <a href="https://www.linkedin.com/in/anirudh-gangadharan/">LinkedIn</a> • 
