--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anirudh Gangadharan</title>
-    <meta name="description" content="Medical Student-Scientist working at the intersection of AI, Biomedical Engineering, and Healthcare Innovation.">
+    <meta name="description" content="Medical Student-Researcher working at the intersection of AI, Biomedical Engineering, and Healthcare Innovation.">
     <style>
         /* The "Hacker Scientist" Stylesheet.
            Optimized for readability, speed, and brutalist elegance.
@@ -68,9 +68,7 @@
 
     <section>
         <p>
-            I am a medical student-researcher bridging clinical medicine, artificial intelligence, and biomedical innovation. 
-            My work focuses on translating complex R&D into accessible narratives and deploying AI-driven diagnostics in real-world clinical settings.
-            Currently focusing on computer vision pipelines for anemia screening and transformer-based brain-computer interfaces.
+            I am a medical student–researcher working at the interface of clinical medicine, artificial intelligence, and biomedical innovation. My work focuses on developing and validating AI-driven diagnostic systems that translate complex R&D into practical tools for real-world care. I have developed and am currently validating a smartphone-based hemoglobin estimation pipeline in a cohort of 600 pregnant women, aimed at scalable anemia screening in resource-limited settings. In parallel, I am collecting data for a computer vision–based refractive error screening system. More broadly, I am interested in leveraging synthetic biology and programmable biological systems to design robust, low-cost solutions for under-resourced and rural healthcare environments. My long-term research direction integrates clinical insight, machine learning, and neurotechnology, with a particular interest in transformer-based brain–computer interfaces and engineered biological substrates capable of bidirectional interaction with human neural tissue. The overarching goal is to build deployable, high-impact technologies that extend diagnostic capacity and enable next-generation neural interfacing.
         </p>
     </section>
 
