--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
         <h2>Research & Innovation</h2>
 
         <div class="item">
-            <h3>EyeScopeAI <span class="project-tags">[ICMR STS Grant]</span></h3>
+            <h3>
+                <a href="https://anirudhgangadharan.github.io/eyescope-ai/" target="_blank">
+                EyeScopeAI
+                </a>
+                <span class="project-tags">[ICMR STS Grant]</span>
+            </h3>
+
             <span class="date">Principal Investigator</span>
             <ul>
                 <li>Developing a fully offline computer vision system for refractive error screening in rural settings.</li>
