--- a/index.html
+++ b/index.html
@@ -91,13 +91,21 @@
         </div>
 
         <div class="item">
-            <h3>MedARC <span class="project-tags">[Brain-Computer Interface]</span></h3>
-            <span class="date">AI Researcher</span>
+            <h3>
+                <a href="https://huggingface.co/spaces/medtechdev/anemia-screening" target="_blank">
+                    HemoglobinAI
+                </a>
+                <span class="project-tags">[Clinical Study – n=600]</span>
+            </h3>
+            <span class="date">Principal Investigator</span>
             <ul>
-                <li>Remote collaboration developing transformer-based models for brain-to-text translation.</li>
-                <li>Decoding neural signals into language using Large Language Models (LLMs).</li>
+                <li>Developed a multimodal machine learning pipeline for non-invasive hemoglobin estimation using smartphone imaging.</li>
+                <li>Compared palpebral conjunctiva and buccal mucosa images in 600 pregnant women using standardized color calibration.</li>
+                <li>Implemented YOLOv8-based segmentation and evaluated seven regression models with 5-fold cross-validation.</li>
+                <li>Demonstrated marginally superior predictive performance using palpebral conjunctiva imaging.</li>
             </ul>
         </div>
+
 
         <div class="item">
             <h3>LumiSleep <span class="project-tags">[Neurostimulation]</span></h3>
