--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h1>Anirudh Gangadharan</h1>
         <div class="header-bio">Medical Student (MS3, MBBS)-Researcher | AI in Healthcare | Biomedical Engineering</div>
         <div class="contact-info">
-            <a href="mailto:gangadharananirudh@gmail.com">Email</a> • 
+            <a href="/cdn-cgi/l/email-protection#e483858a8385808c8596858a858a8d9691808ca48389858d88ca878b89">Email</a> • 
             <a href="https://www.linkedin.com/in/anirudh-gangadharan/">LinkedIn</a> • 
             <a href="https://github.com/anirudhgangadharan">GitHub</a> • 
         </div>
@@ -106,6 +106,22 @@
             </ul>
         </div>
 
+
+        <div class="item">
+            <h3>
+                <a href="https://anirudhgangadharan.github.io/ecg-echo/" target="_blank">
+                    ECG is All You Need
+                </a>
+                <span class="project-tags">[Clinical Study — n=311]</span>
+            </h3>
+            <span class="date">Co-Investigator</span>
+            <ul>
+                <li>Demonstrated first proof-of-concept for cross-modal cardiac inference: LLM-generated echocardiographic reports from 12-lead ECG images alone, without fine-tuning.</li>
+                <li>Retrospective analysis of 311 paired ECG–echocardiogram cases comparing three LLMs against cardiologist gold standard.</li>
+                <li>Best model achieved r=0.394 (p&lt;0.001) for ejection fraction prediction, with 64% of estimates within ±5% of true values.</li>
+                <li>Aimed at democratizing cardiac imaging in resource-constrained settings where echocardiography is unavailable.</li>
+            </ul>
+        </div>
 
         <div class="item">
             <h3>LumiSleep <span class="project-tags">[Neurostimulation]</span></h3>
@@ -173,8 +189,4 @@
             <br>
             <span style="font-size: 0.7rem; color: #999;">
                 (आत्मनो मोक्षार्थं जगद्धिताय च)
-            </span>
-        </p>
-    </footer>
-</body>
-</html>
+            
