--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="item">
             <h3>
-                <a href="https://huggingface.co/spaces/medtechdev/anemia-screening" target="_blank">
+                <a href="https://anirudhgangadharan.github.io/hemoglobin-ai/" target="_blank">
                     HemoglobinAI
                 </a>
                 <span class="project-tags">[Clinical Study – n=600]</span>
