--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <header>
         <h1>Anirudh Gangadharan</h1>
-        <div class="header-bio">Medical Student (MS3, MBBS)-Researcher | AI in Healthcare | Biomedical Engineering</div>
+        <div class="header-bio">Researcher · AI in Medicine · Biomedical Engineering</div>
         <div class="contact-info">
             <a href="/cdn-cgi/l/email-protection#e483858a8385808c8596858a858a8d9691808ca48389858d88ca878b89">Email</a> • 
             <a href="https://www.linkedin.com/in/anirudh-gangadharan/">LinkedIn</a> • 
@@ -68,7 +68,7 @@
 
     <section>
         <p>
-            I am a medical student–researcher working at the interface of clinical medicine, artificial intelligence, and biomedical innovation. My work focuses on developing and validating AI-driven diagnostic systems that translate complex R&D into practical tools for real-world care. I have developed and am currently validating a smartphone-based hemoglobin estimation pipeline in a cohort of 600 pregnant women, aimed at scalable anemia screening in resource-limited settings. In parallel, I am collecting data for a computer vision–based refractive error screening system. More broadly, I am interested in leveraging synthetic biology and programmable biological systems to design robust, low-cost solutions for under-resourced and rural healthcare environments. My long-term research direction integrates clinical insight, machine learning, and neurotechnology, with a particular interest in transformer-based brain–computer interfaces and engineered biological substrates capable of bidirectional interaction with human neural tissue. The overarching goal is to build deployable, high-impact technologies that extend diagnostic capacity and enable next-generation neural interfacing.
+            I build diagnostic systems for settings where they don't exist. My research focuses on cross-modal medical inference - extracting clinical insight from low-cost inputs (smartphone images, ECG waveforms) to replace expensive diagnostics in resource-constrained environments. Current work includes LLM-based ECG-to-echocardiography inference (r=0.394, n=311) and a smartphone hemoglobin estimation pipeline validated in 600 pregnant women. I am a third-year medical student (MBBS) at Gadag Institute of Medical Sciences and a committed listener at MIT's How To Grow (Almost) Anything (HTGAA 2026), working on engineered biological systems for hospital-acquired infection control. My long-term direction is building translation layers between biological systems and computational interfaces.       
         </p>
     </section>
 
